Falsche Darstellung im Dark Mode behoben :)

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -21,6 +21,7 @@ $task-background: #F2F6F8;
 $bg-12: #12191D;
 $bg-11: #1D272C;
 $bg-10: #263238;
+$bg-13: #273238;
 $bg-09: #37474F;
 $bg-04: #90A4AE;
 $bg-03: #C6D2D9;
